# GuitarVocoder

./: ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build-install.sh  gitignore.txt  setup.sh
Source/: MacroMapping.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: BitCrusher.h  ClarityEngine.h  DriveContinuum.h  EnvelopeFollower.h  GuitarEnrichment.h  OctaveGenerator.h  SpectralSpread.h  SustainCompressor.h  TiltEQ.h  UnisonDetune.h  Vocoder.cpp  Vocoder.h  VoiceGate.h  VoicePreEQ.h  VoicedUnvoicedDetector.h
examples/: README.md  examples-README.md
